# Python_World

.gitignore/: aisa.py  resume.py  your-creds.json
Flask_Project/backend/: main.py  models.py
Flask_Project/backend/instance/: mydatabase.db
Flask_Project/frontend/: index.html
Flask_Project/frontend/src/: App.css  App.jsx  ContactForm.jsx  ContactList.jsx  index.css
Learn_Django/: README.md  main.py  pyproject.toml
Learn_Django/firstproject/: db.sqlite3
Learn_Django/firstproject/firstapp/: urls.py  views.py
Learn_Django/firstproject/firstproject/: settings.py  urls.py  views.py
Learn_Django/firstproject/static/: style.css
Learn_Django/firstproject/templates/: index.html  layedd.html  layout.html
MCP_Scraper/: main.py
NLP/: README.md  main.ipynb  main.py
NLP/nlp_env/: pyvenv.cfg
NLP/nlp_env/Scripts/: activate  activate.bat
NiceGui/: app.py
NiceGui/myenv/: pyvenv.cfg
NiceGui/myenv/Scripts/: activate  activate.bat
Numpy_fundamentals/: array2.npy  phase1.ipynb  phase2.ipynb  phase3.ipynb  phase4.ipynb
Numpy_fundamentals/numpy_env/: pyvenv.cfg
Numpy_fundamentals/numpy_env/Scripts/: activate  activate.bat
Scrape_with_mcp/: .env  README.md  main.py  pyproject.toml
Streamlit_Learning/: chapter1.py  chapter2.py  chapter3.py  chapter5.py
Streamlit_Project/: main.py
Streamlit_Project/streamlit_project/: pyvenv.cfg
Streamlit_Project/streamlit_project/Scripts/: activate  activate.bat
Streamlittt/: chaii_sales.csv  chapter4.py
mcp-server/: main.py  notes.txt  pyproject.toml
(+1 files in other folders)
