[project]
name = "mcp-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-community>=0.3.23",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "ollama>=0.4.8",
    "openai>=1.78.0",
    "python-dotenv>=1.1.0",
]

[tool.uv.workspace]
members = [
    "mcp_scraper",
]
